unpackaged/main/default/objects/Project_Contract_Matching_Field__mdt/Project_Contract_Matching_Field__mdt.object-meta.xml
<CustomObject>
    <description>Used to define fields to compare between project and contract when trying to populate project field on contract.</description>
    <label>Project Contract Matching Field</label>
    <pluralLabel>Project Contract Matching Fields</pluralLabel>
</CustomObject>