unpackaged/main/default/objects/Project_Contract_Matching_Field__mdt/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <description>The field of Project__c object</description>
    <inlineHelpText>The field of Project__c object</inlineHelpText>
    <label>Destination Field</label>
    <metadataRelationshipControllingField>Project_Contract_Matching_Field__mdt.Destination_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Project_Contract_Matching_Fields1</relationshipLabel>
    <relationshipName>Project_Contract_Matching_Fields1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>