unpackaged/main/default/objects/Project_Contract_Matching_Field__mdt/fields/Destination_Object__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object__c</fullName>
    <description>The Project__c object</description>
    <inlineHelpText>The Project__c object</inlineHelpText>
    <label>Destination Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Project_Contract_Matching_Fields1</relationshipLabel>
    <relationshipName>Project_Contract_Matching_Fields1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>