unpackaged/main/default/objects/Project_Contract_Matching_Field__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>The field of Contract__c object</description>
    <inlineHelpText>The field of Contract__c object</inlineHelpText>
    <label>Source Field</label>
    <metadataRelationshipControllingField>Project_Contract_Matching_Field__mdt.Source_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Project_Contract_Matching_Fields</relationshipLabel>
    <relationshipName>Project_Contract_Matching_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>