unpackaged/main/default/objects/Project_Contract_Matching_Field__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The Contract__c object</description>
    <inlineHelpText>The Contract__c object</inlineHelpText>
    <label>Source Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Project_Contract_Matching_Fields</relationshipLabel>
    <relationshipName>Project_Contract_Matching_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>