unpackaged/main/default/objects/Project_Contract_Matching_Field__mdt/validationRules/Source_Contract_Destination_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_Contract_Destination_Project</fullName>
    <active>false</active>
    <description>Source object must be Contract__c and Destination object must be Project__c</description>
    <errorConditionFormula>OR(
Source_Object__r.DeveloperName != &#39;Contract&#39;,
Destination_Object__r.DeveloperName != &#39;Project&#39;
)</errorConditionFormula>
    <errorMessage>Source object must be Contract__c and Destination object must be Project__c</errorMessage>
</ValidationRule>