unpackaged/main/default/objects/Project_Contract_Matching_Field__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Destination_Object__c</columns>
    <columns>Destination_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>